# libtd

./: .clang-format  CMakeLists.txt
include/libtd/: argv.h  gc.h  string.h
src/: argv.c  gc.c  string.c
test/: CMakeLists.txt  main.c
